--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,2 +1,14 @@
-<app-header></app-header>
-<app-navigation></app-navigation>
+<mat-sidenav-container [class.boxed]="layoutMode">
+
+
+    <mat-sidenav class="sidenav" [position]="sidenavAlign" [mode]="sidenavMode" [opened]="sidenavOpen" #sidenav>
+        <app-brand [ngClass]="settings.colorClasses.brand"></app-brand>
+        <app-navigation ></app-navigation>
+    </mat-sidenav>
+
+    <div class="sidenav-container" fxLayout="column">
+        <app-header  [sidenav]="sidenav" ></app-header>
+    </div>
+
+
+</mat-sidenav-container>
